# ecg_app

./: .gitignore  ANDROID_BUILD.md  BUILD_WINDOWS.md  CMakeLists.txt  COMPILE_ISSUES.md  ECG_LAUNCHER.bat  QUICKSTART.md  QUICK_REFERENCE.txt  README.md  RUN_ECG_APP.bat  START_HERE.md  android_config.pri  ecg_app.pro
android/: AndroidManifest.xml
scripts/: MQTT_SIMULATOR.md  build_debug.bat  build_release.bat  build_windows.bat  mqtt_simulator.py  run_test_env.bat
src/: ChartWidget.cpp  ChartWidget.h  CloudSyncManager.cpp  CloudSyncManager.h  DatabaseManager.cpp  DatabaseManager.h  MqttClientManager.cpp  MqttClientManager.h  VitalSignData.cpp  VitalSignData.h  ecg_app.cpp  ecg_app.h  ecg_app.ui  main.cpp
